--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
-.my_fontSize1 {
+.st_fontSize1 {
     font-size: 14px;
 }
 
-.my_fontSize2 {
+.st_fontSize2 {
     font-size: 12px;
 }
 
-.my_upContainer {
+.st_upContainer {
     height: 20vh;
     background-color: rgb(0, 150, 136);
 }
 
-.my_downContainer {
+.st_downContainer {
     height: 80vh;
     background-color: rgb(214, 219, 217);
 
 }
-.my_chatbox {
+.st_chatbox {
     z-index: 10;
     position: absolute;
     top: 1rem;
@@ -25,46 +25,73 @@
     background-color: bisque;
 }
 
-.my_height1 {
+.st_height1 {
     height: 5vh;
     background-color: rgb(234, 234, 234);
 }
 
-.my_height1 img {
+.st_height1 img {
     height: 2rem;
     border-radius: 50%;
 }
 
-.my_height2 {
+.st_height2 {
     height: 6vh;
     background-color: rgb(142, 218, 252);
 }
 
-.my_height3 {
+.st_height3 {
     height: 4vh;
     background-color:  rgb(234, 234, 234);
 }
 
-.my_height4 {
+.st_height4 {
     height: 80vh;
 }
 
-.my_main {
+.st_main {
     height:85vh;
     background-image: url(img/mine.jpg);
 }
 
-.my_img img {
+.st_img img {
     height: 4rem;
     border-radius: 50%;
 }
 
-.my_input1 {
+.st_input1 {
     height: 2rem;
     font-size: 12px;
 }
 
-.my_colorGrey {
+.st_colorGrey {
     color: grey;
 }
+
+.inviati {
+    background-color: aquamarine;
+    max-width: 50%;
+    margin-right: 1rem;
+    margin-left: auto;
+    border-radius: 10px;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+
+}
+
+.ricevuti {
+    background-color: white;
+    max-width: 60%;
+    margin-right: auto;
+    margin-left: 1rem;
+    border-radius: 10px;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.st_date {
+    font-size: 10px;
+}
+
+
 
